Fixed MealTrackerService not working
